--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  margin: 0px;
+  margin: 0px 0px 20px;
 }
 
 header {
@@ -109,6 +109,12 @@ i {
   margin: auto;
 }
 
+.news-brief {
+  min-width: 100%;
+  background-color: var(--background-light-purple);
+  display: flex;
+  flex-direction: column;
+}
 .news h3 {
   background-color: var(--background-light-purple);
   padding: 5px;
@@ -123,7 +129,6 @@ i {
   text-decoration: none;
   background-color: var(--primary-yellow);
   padding: 2px 20px;
-  box-shadow: -2px 2px 2px var(--almost-black);
   position: absolute;
   bottom: 5%;
   right: 5%;
