--- a/css/style.css
+++ b/css/style.css
@@ -106,9 +106,6 @@ i {
   padding: 3px;
 }
 
-.exhibition-brief-cta {
-  padding: 10px;
-}
 .news {
   max-width: 80%;
   margin: auto;
@@ -120,6 +117,11 @@ i {
   display: flex;
   flex-direction: column;
   align-items: start;
+}
+
+.exhibition-brief-cta,
+.explore-brief a {
+  margin: 10px;
 }
 .news h3 {
   background-color: var(--background-light-purple);
