--- a/css/media.css
+++ b/css/media.css
@@ -1,2 +1,10 @@
-@media only screen and (min-width: 970px) {
+@media only screen and (min-width: 600px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .wrapper h2 {
+    grid-column: -1/1;
+  }
 }
