--- a/css/style.css
+++ b/css/style.css
@@ -12,41 +12,10 @@ body {
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
   background-color: var(--almost-black);
+  min-height: 60px;
 }
 
-nav {
-  font: 1rem "Nunito", sans-serif;
-  display: none;
-  text-align: left;
-}
-
-nav ul {
-  list-style: none;
-  text-align: left;
-  background-color: var(--almost-black);
-}
-
-nav a {
-  text-decoration: none;
-  color: var(--almost-white);
-  line-height: 1.625rem;
-}
-nav a:hover {
-  color: var(--primary-yellow);
-  text-decoration: underline;
-}
-
-#hamburger-menu {
-  display: none;
-}
-
-#hamburger-menu:checked + nav {
-  display: block;
-}
 h1 {
   font: 2.25rem "Catamaran", sans-serif;
   font-weight: 700;
@@ -80,13 +49,43 @@ i {
 }
 
 .logo {
-  width: 100%;
+  padding: 10px;
+  max-width: 150px;
+  float: right;
 }
 
-.fa-bars {
+nav ul {
+  list-style: none;
+  line-height: 2.1875rem;
+  text-align: center;
+  padding-left: 0px;
+}
+nav a {
+  font: 1rem "Nunito", sans-serif;
+  text-decoration: none;
+  color: var(--almost-white);
+}
+
+nav a:hover {
+  text-decoration: underline;
   color: var(--primary-yellow);
-  font-size: 30px;
-  padding: 20px;
+}
+nav,
+.hidden-item-small-screen,
+#hamburger-menu {
+  display: none;
+}
+
+.hamburger-label {
+  color: var(--primary-yellow);
+  font-size: 1.5625rem;
+  padding: 10px;
+  /*float: right;*/
+  display: block;
+}
+
+#hamburger-menu:checked ~ nav {
+  display: block;
 }
 
 .exhibition {
