Attempted double checkbox hack

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,10 @@ nav,
   display: block;
 }
 
+/*.plan-your-visit-items {
+  display: none;
+}*/
+
 .exhibition {
   position: relative;
   background-size: cover;
