--- a/css/media.css
+++ b/css/media.css
@@ -52,4 +52,24 @@
   .hamburger-label {
     display: none;
   }
+
+  .plan-your-visit-label {
+    color: var(--almost-white);
+    font: 1rem "Nunito", sans-serif;
+  }
+
+  .plan-your-visit-label:hover {
+    color: var(--primary-yellow);
+    text-decoration: underline;
+  }
+  #plan-your-visit-menu {
+    display: none;
+  }
+  .plan-your-visit-items:hover {
+    color: var(--primary-yellow);
+  }
+  .plan-your-visit-menu:checked + .plan-your-visit-items {
+    display: grid;
+    text-align: left;
+  }
 }
