--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ i {
 
 .logo {
   padding: 10px;
-  max-width: 150px;
+  max-width: 50%;
   float: right;
 }
 
@@ -206,8 +206,8 @@ footer i {
 
 .form {
   background-color: var(--almost-white);
-  min-height: 40px;
-  min-width: 260px;
+  height: 40px;
+  width: 80%;
   margin-left: 20px;
   border: none;
 }
