--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,10 @@ footer i {
   margin-left: 20px;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+}
 .form {
   background-color: var(--almost-white);
   height: 40px;
@@ -215,6 +219,9 @@ footer i {
 .cta-submit {
   border: none;
   margin: 10px 0px 0px 20px;
+}
+.cta-form {
+  align-self: flex-end;
 }
 .copyright {
   text-transform: initial;
