Added aria-label to socials, added aria-hidden where there's text provided, added datetime attribute to exhibitions

--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ h1 {
 
 .featured-exhibition p,
 .featured-exhibition i,
-.featured-exhibition date {
+.featured-exhibition time {
   background-color: var(--almost-black);
   color: var(--almost-white);
   padding: 5px;
