--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,39 @@ nav,
   padding: 3px;
 }
 
+.cta {
+  font: 1.25rem "Fredoka One", cursive;
+  color: var(--almost-black);
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: var(--primary-yellow);
+  padding: 2px 20px;
+  box-shadow: 0px 3px 6px #000;
+}
+
+.cta-large {
+  font-size: 1.625rem;
+}
+
 .news {
-  max-width: 80%;
+  width: 80%;
+  height: 320px;
   margin: auto;
+  align-content: center;
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+}
+.news > div {
+  scroll-snap-align: start;
+}
+
+.slider {
+  width: 80%;
+  height: 100%;
+  flex-shrink: 0;
+  height: 100%;
+  margin-left: 10%;
 }
 
 .news-brief {
@@ -172,22 +202,9 @@ nav,
   line-height: 1.375rem;
   margin: 20px 0px 0px;
 }
-
-.cta {
-  font: 1.25rem "Fredoka One", cursive;
-  color: var(--almost-black);
-  text-transform: uppercase;
-  text-decoration: none;
-  background-color: var(--primary-yellow);
-  padding: 2px 20px;
-  box-shadow: 0px 3px 6px #000;
-  /*position: absolute;
-  bottom: 5%;
-  right: 5%;*/
-}
-
-.cta-large {
-  font-size: 1.625rem;
+.news-info {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 footer {
