--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@ body {
   margin: 0px;
 }
 
-header {
+/*header {
   background-color: var(--almost-black);
   min-height: 60px;
-}
+}*/
 
 h1 {
   font: 2.25rem "Catamaran", sans-serif;
@@ -55,13 +55,113 @@ i {
   margin: 0px 10px;
 }
 
+header {
+  background-color: var(--almost-black);
+}
+
 .logo {
+  max-width: 250px;
+}
+.hamburger,
+.close {
+  font-size: 2rem;
+  color: var(--almost-white);
+}
+
+.hamburger:hover,
+.close:hover {
+  color: var(--primary-yellow);
+}
+
+nav {
+  background-color: var(--almost-black);
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  position: absolute;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden; /*may have to remove it later*/
+
+  /*-- animation --*/
+  transform: translateY(-100%);
+  transition: transform 1 ease;
+}
+
+nav:target {
+  transform: translateY(0);
+}
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: flex-start;
+  flex-flow: column wrap;
+  width: 100%;
+  /*flex: 1;*/
+}
+
+nav li {
+  text-align: center;
+}
+nav a {
+  text-decoration: none;
+  color: var(--almost-white);
+  font: 1.125rem "Nunito", sans-serif;
+  line-height: 2.5rem;
+  display: block;
+}
+
+nav li:hover {
+  background-color: var(--primary-yellow);
+  color: var(--almost-black);
+}
+
+nav a:hover {
+  color: var(--almost-black);
+}
+
+.home {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+/*.navigation {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  position: absolute;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden; /*may have to remove it later*/
+
+/*-- animation --*/
+/*transform: translateY(-100%);
+  transition: transform 0.2 ease;
+}
+
+/*.navigation:target {
+  transform: translateY(0);
+}*/
+/*.hidden-small-screens {
+  display: none;
+}
+
+.logo {
+  width: 50%;
+}
+/*.logo {
   padding: 10px;
   max-width: 150px;
   float: right;
-}
+}*/
 
-nav ul {
+/*nav ul {
   list-style: none;
   line-height: 2.1875rem;
   text-align: center;
@@ -83,20 +183,21 @@ nav,
   display: none;
 }
 
-.fa-microscope,
-.fa-comment-dots {
-  transform: scaleX(-1);
-}
 .hamburger-label {
   color: var(--primary-yellow);
   font-size: 1.5625rem;
   padding: 10px;
   /*float: right;*/
-  display: block;
+/* display: block;
 }
 
 #hamburger-menu:checked ~ nav {
   display: block;
+}*/
+
+.fa-microscope,
+.fa-comment-dots {
+  transform: scaleX(-1);
 }
 
 /*.plan-your-visit-items {
