--- a/css/media.css
+++ b/css/media.css
@@ -16,9 +16,9 @@
       "copyright copyright";
   }
 
-  footer p {
+  /*footer p {
     padding-top: 35px;
-  }
+  }*/
   .socials {
     justify-self: end;
   }
@@ -90,7 +90,7 @@
     margin-right: 20px;
   }
 
-  nav ul ul a{
+  nav ul ul a {
     width: 100%;
   }
   nav a {
@@ -102,31 +102,31 @@
     display: none;
   }
 
-  .dropdown{
+  .dropdown {
     position: relative;
   }
 
-  .dropdown-menu{
+  .dropdown-menu {
     display: none;
     position: absolute;
     z-index: 9999;
     background-color: var(--almost-black);
   }
 
-  .dropdown:hover .dropdown-menu{
+  .dropdown:hover .dropdown-menu {
     display: block;
   }
 
   .hidden-small-screens {
     display: inline-block;
   }
-  }
+}
 
-  /*.home {
+/*.home {
     display: flex;
     justify-content: space-between;
   }*/
-  /*
+/*
   nav ul {
     display: flex;
     justify-content: flex-end;
@@ -155,4 +155,3 @@
   .display-large-screens {
     display: block;
   }*/
-}
