--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,6 @@ footer {
 footer p {
   color: var(--almost-white);
   text-transform: uppercase;
-  font-size: 0.875rem;
   font-weight: 600;
   margin-left: 20px;
   margin-right: 20px;
@@ -334,17 +333,58 @@ footer i {
   margin-left: 20px;
 }
 
+.newsletter {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-left: 20px;
+}
+.newsletter-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.newsletter-heading {
+  color: var(--almost-white);
+  text-transform: uppercase;
+  font: 1rem "Nunito", sans-serif;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+.newsletter-contact-field {
+  display: flex;
+  flex-direction: column;
+  height: 40px;
+  font-size: 0.75rem;
+  color: grey;
+  margin-bottom: 5px;
+  background-color: var(--almost-white);
+}
+
+.cta-newsletter {
+  align-self: flex-end;
+}
+/*.newsletter {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+.newsletter-cta {
+  align-self: flex-end;
+}
 .form {
   background-color: var(--almost-white);
   height: 40px;
-  width: 80%;
+  width: 100%;
   margin-left: 20px;
   border: none;
-}
+}*/
 
 .cta-submit {
   border: none;
-  margin: 10px 0px 0px 20px;
+  margin: 10px 0 0 20px;
 }
 
 .socials li {
