--- a/css/index.css
+++ b/css/index.css
@@ -76,3 +76,32 @@ h1 {
   max-width: 100%;
   min-height: 100%;
 }
+
+.news {
+  width: 90%;
+  height: 320px;
+  margin: auto;
+  align-content: center;
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+}
+/*.news > div {
+  scroll-snap-align: start;
+}*/
+
+.slider {
+  width: 90%;
+  height: 100%;
+  flex-shrink: 0;
+  height: 100%;
+  margin-left: 5%;
+}
+
+.news-brief {
+  min-width: 100%;
+  background-color: var(--background-light-purple);
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
