--- a/css/explore_contact_get-involved.css
+++ b/css/explore_contact_get-involved.css
@@ -1,6 +1,3 @@
-body {
-  position: relative;
-}
 img {
   width: 100%;
   height: auto;
@@ -105,6 +102,7 @@ p {
   flex-direction: column;
   width: 80%;
   margin: auto;
+  position: relative;
 }
 .form-field {
   display: flex;
@@ -142,19 +140,18 @@ textarea {
 }
 
 .popup-box {
-  max-width: 300px;
+  max-width: 250px;
   text-align: center;
-  /*background-color: white;*/
   position: absolute;
-  bottom: 100%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 0%;
+  bottom: 50%;
+  /*transform: translate(-50%, -50%);*/
   display: none;
-  animation: bounce 1.5s 2, parachute 6s forwards;
+  animation: /*bounce 1.5s 2,*/ parachute 1s forwards;
 }
 
 .message {
-  border: 3px solid var(--primary-yellow);
+  border: 3px solid var(--almost-black);
   background-color: white;
 }
 .popup-box h2,
@@ -168,7 +165,7 @@ textarea {
 .fa-smile-beam {
   font-size: 3rem;
   margin-bottom: 20px;
-  color: var(--primary-yellow);
+  color: var(--almost-black);
 }
 
 #pop-up-cta {
@@ -178,31 +175,31 @@ textarea {
   display: block;
 }
 
-@keyframes bounce {
+/*@keyframes bounce {
   0% {
     transform: rotate(15deg);
   }
   /*25% {
     transform: rotate(0deg);
   }*/
-  50% {
+/*50% {
     transform: rotate(-15deg);
   }
   /*75% {
     transform: rotate(0deg);
   }*/
-  100% {
+/*100% {
     transform: rotate(15deg);
   }
-}
+}*/
 
 @keyframes parachute {
   0% {
     /*position: absolute;*/
-    bottom: 100%;
+    left: -25%;
   }
 
   100% {
-    bottom: 25%;
+    left: 15%;
   }
 }
