--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,12 @@ h4 {
   color: var(--almost-black);
 }
 
+article,
+section {
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
 p {
   font: 1rem "Nunito", sans-serif;
   margin: 0px 10px;
