--- a/css/exhibitions.css
+++ b/css/exhibitions.css
@@ -2,10 +2,31 @@ h2 {
   margin-left: 0px;
 }
 
+.image-container {
+  height: 130px;
+  overflow: hidden;
+}
+
 img {
+  width: 100%;
+  height: 100%;
+}
+/*.image {
   width: 100%;
   object-fit: fill;
 }
+
+.image-two {
+  margin-top: -40px;
+}
+
+.image-three {
+  height: 100%;
+}
+
+.image-five {
+  margin-top: -80px;
+}*/
 .exhibition-info {
   width: 90%;
   margin: 0px auto;
