--- a/css/explore_contact_get-involved.css
+++ b/css/explore_contact_get-involved.css
@@ -162,6 +162,7 @@ textarea {
   left: -25%;
   bottom: 25%;
   display: none;
+  background-color: rgba(0, 0, 0, 0.5);
   animation: rocket 0.5s ease-out forwards;
 }
 
@@ -199,6 +200,7 @@ textarea {
 }
 #pop-up-cta:checked + .popup-box {
   display: block;
+  box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
 }
 
 @keyframes rocket {
