--- a/css/explore_contact_get-involved.css
+++ b/css/explore_contact_get-involved.css
@@ -165,7 +165,7 @@ textarea {
   bottom: 25%;
   display: none;
   background-color: rgba(0, 0, 0, 0.5);
-  animation: rocket 0.5s ease-out forwards;
+  animation: rocket 0.2s ease-out forwards;
 }
 
 .message {
@@ -205,7 +205,7 @@ textarea {
   box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
 }
 
-@keyframes rocket {
+/*@keyframes rocket {
   0% {
     left: -25%;
   }
@@ -216,4 +216,4 @@ textarea {
   100% {
     left: 15%;
   }
-}
+}*/
