--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,13 @@ h4 {
   color: var(--almost-black);
 }
 
+/* --- ASK HOW TO MAKE SCROLL WORK 
+
 article,
 section {
-  overflow-y: scroll;
+  overflow: scroll;
   scroll-behavior: smooth;
-}
+}                                        ---*/
 
 p {
   font: 1rem "Nunito", sans-serif;
@@ -288,6 +290,7 @@ nav,
 footer {
   background-color: var(--almost-black);
   margin-top: 20px;
+  position: relative;
 }
 
 footer p {
@@ -363,6 +366,63 @@ footer i {
   margin-bottom: 30px;
 }
 
+.modal-popup {
+  max-width: 250px;
+  text-align: center;
+  position: absolute;
+  left: -25%;
+  bottom: 25%;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  animation: rocket 0.2s ease-out forwards;
+}
+
+.feedback {
+  border: 3px solid var(--almost-black);
+  background-color: white;
+}
+
+.close-feedback i {
+  margin-top: 10px;
+  margin-right: 10px;
+  color: var(--almost-black);
+  font-size: 2rem;
+  position: absolute;
+  right: 0%;
+}
+
+.close-feedback i:hover {
+  color: var(--primary-yellow);
+}
+
+.modal-popup p {
+  margin: 30px;
+  text-align: left;
+  color: var(--almost-black);
+  font: 1rem "Nunito", sans-serif;
+  text-transform: initial;
+}
+
+#toggle-popup {
+  display: none;
+}
+#toggle-popup:checked + .modal-popup {
+  display: block;
+  box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
+}
+
+@keyframes rocket {
+  0% {
+    left: -25%;
+  }
+
+  50% {
+    left: 0%;
+  }
+  100% {
+    left: 15%;
+  }
+}
 .socials li {
   list-style: none;
 }
