--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,11 @@ nav,
 .explore-brief a {
   margin: 10px;
 }
+
+.news {
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
 .news h3 {
   background-color: var(--background-light-purple);
   padding: 5px;
@@ -286,6 +291,27 @@ nav,
 .news-info {
   margin-top: 5px;
   margin-bottom: 5px;
+}
+.carousel-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  scroll-snap-align: start;
+}
+
+.carousel-links a {
+  color: var(--almost-black);
+  font: 1.5rem "Nunito", sans-serif;
+  padding: 5px 15px;
+  border: 2px solid var(--background-light-purple);
+  background-color: var(--background-light-purple);
+  border-radius: 99px;
+  margin: 10px;
+  text-decoration: none;
+}
+
+.carousel-links a:focus {
+  border-color: var(--almost-black);
 }
 
 footer {
