--- a/css/index.css
+++ b/css/index.css
@@ -86,9 +86,42 @@ h1 {
   overflow-x: auto;
   scroll-snap-type: x mandatory;
 }
-/*.news > div {
+
+.news {
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+.news h3 {
+  background-color: var(--background-light-purple);
+  padding: 5px;
+  line-height: 1.375rem;
+  margin: 20px 0px 0px;
+}
+.news-info {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.carousel-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   scroll-snap-align: start;
-}*/
+}
+
+.carousel-links a {
+  color: var(--almost-black);
+  font: 1.125rem "Nunito", sans-serif;
+  padding: 5px 15px;
+  background-color: var(--almost-black);
+  color: var(--background-light-purple);
+  border-radius: 99px;
+  margin: 10px;
+  text-decoration: none;
+}
+
+.carousel-links a:focus {
+  border-color: var(--almost-black);
+}
 
 .slider {
   width: 90%;
