--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,12 @@
 h1 {
   color: var(--almost-white);
   text-shadow: 0px 3px 6px #000;
-  margin: 10px 10px 50px 10px;
+  margin: 10px 10px 100px 10px;
   padding-top: 10px;
+}
+
+h2 {
+  margin-top: 40px;
 }
 
 .featured-exhibition {
@@ -26,7 +30,7 @@ h1 {
 }
 
 .featured-exhibition p,
-.featured-exhibition date {
+.featured-exhibition time {
   margin-left: 0px;
 }
 
@@ -103,7 +107,7 @@ h1 {
   background-color: var(--background-light-purple);
   padding: 5px;
   line-height: 1.375rem;
-  margin: 20px 0px 0px;
+  margin: 0px 0px 20px;
 }
 .news-info {
   margin-top: 5px;
