--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ h1 {
   font: 2rem "Catamaran", sans-serif;
   font-weight: 700;
   margin-left: 10px;
+  margin-bottom: 0;
   line-height: 2rem;
   color: var(--almost-black);
 }
@@ -316,7 +317,6 @@ footer i {
   color: var(--almost-white);
   text-transform: uppercase;
   font: 1rem "Nunito", sans-serif;
-  font-weight: 600;
   margin-top: 10px;
   margin-bottom: 5px;
 }
