--- a/css/media.css
+++ b/css/media.css
@@ -156,6 +156,9 @@
 }
 
 @media only screen and (min-width: 1000px) {
+  .logo {
+    min-width: 300px;
+  }
   header {
     display: flex;
     align-items: center;
@@ -177,7 +180,6 @@
   }
   nav a {
     margin-right: 15px;
-    font-size: 1.25rem;
     padding-right: 10px;
   }
   .hamburger,
@@ -202,6 +204,89 @@
 
   .hidden-small-screens {
     display: inline-block;
+  }
+
+  .featured-exhibition {
+    height: 300px;
+  }
+  .featured-exhibition h1 {
+    margin-bottom: 150px;
+  }
+
+  .cta-large {
+    font-size: 2rem;
+  }
+
+  /*.featured-exhibition h1 {
+    margin-bottom: 150px;
+    margin-left: 100px;
+  }
+
+  .cta-large {
+    font-size: 2rem;
+  }
+
+  .featured-exhibition-brief {
+    margin-left: 100px;
+    margin-right: 250px;
+  }*/
+
+  .exhibition,
+  .exhibition-brief,
+  .exhibition-info,
+  .explore {
+    max-width: 300px;
+  }
+
+  .news {
+    flex-direction: column;
+  }
+
+  .news h3 {
+    margin-bottom: 0;
+  }
+
+  .news-brief {
+    margin-bottom: 20px;
+  }
+  .carousel-links {
+    display: none;
+  }
+
+  .news-one,
+  .news-two,
+  .news-three {
+    max-height: 350px;
+  }
+
+  .slider {
+    width: auto;
+  }
+
+  .landing-grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 10px;
+  }
+  aside {
+    grid-column: 2;
+    max-width: 300px;
+  }
+
+  aside h2 {
+    margin-top: 20px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .exhibition,
+  .exhibition-brief,
+  .exhibition-info {
+    max-width: 350px;
+  }
+
+  .news {
+    width: 350px;
   }
 }
 
