--- a/css/media.css
+++ b/css/media.css
@@ -108,6 +108,10 @@
   .exhibition-info {
     min-width: 350px;
   }
+
+  .heading-contact-form {
+    text-align: center;
+  }
 }
 
 @media only screen and (min-width: 1000px) {
@@ -136,6 +140,10 @@
   nav a {
     margin-right: 15px;
     padding-right: 10px;
+  }
+
+  h1 {
+    font-size: 2.5rem;
   }
   .hamburger,
   .close {
@@ -223,6 +231,12 @@
   .wrapper-exhibitions {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  /* ---------- Contact ---------- */
+
+  .contact-form {
+    width: 500px;
   }
 }
 
