--- a/css/exhibitions.css
+++ b/css/exhibitions.css
@@ -12,22 +12,11 @@ img {
   height: 100%;
   object-fit: cover;
 }
-/*.image {
-  width: 100%;
-  object-fit: fill;
+
+article {
+  margin-bottom: 40px;
 }
 
-.image-two {
-  margin-top: -40px;
-}
-
-.image-three {
-  height: 100%;
-}
-
-.image-five {
-  margin-top: -80px;
-}*/
 .exhibition-info {
   width: 90%;
   margin: 0px auto;
