--- a/css/explore_contact_get-involved.css
+++ b/css/explore_contact_get-involved.css
@@ -1,3 +1,5 @@
+/* ---------- Global Styles ---------- */
+
 img {
   width: 100%;
 }
@@ -11,6 +13,12 @@ p {
   color: var(--almost-black);
   font-weight: 600;
 }
+
+.paragraph-container {
+  margin-bottom: 40px;
+}
+
+/* ---------- Subheading pictures ---------- */
 
 .image-wrapper {
   display: flex;
@@ -26,6 +34,7 @@ p {
 .image-three {
   margin-right: 10px;
 }
+
 .children-aeronautics {
   flex: 1.5045;
 }
@@ -95,6 +104,8 @@ p {
   flex: 1.3333;
 }
 
+/* ---------- Contact ---------- */
+
 .contact-intro {
   margin: 20px;
 }
@@ -103,8 +114,6 @@ p {
   margin: 0 auto;
 }
 .contact-form {
-  /*display: flex;
-  flex-direction: column;*/
   width: 70%;
   margin: auto;
   position: relative;
@@ -116,8 +125,6 @@ p {
 
 .contact-heading,
 .contact-field {
-  /*display: flex;
-  flex-direction: column;*/
   display: block;
   font: 1rem "Nunito", sans-serif;
   font-weight: 600;
@@ -158,6 +165,8 @@ textarea {
   align-self: flex-end;
   margin-top: 20px;
 }
+
+/* ---------- Feedback message ---------- */
 
 .popup-box {
   max-width: 250px;
@@ -206,16 +215,3 @@ textarea {
   display: block;
   box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
 }
-
-/*@keyframes rocket {
-  0% {
-    left: -25%;
-  }
-
-  50% {
-    left: 0%;
-  }
-  100% {
-    left: 15%;
-  }
-}*/
