--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 h1 {
   color: var(--almost-white);
   text-shadow: 0px 3px 6px #000;
-  margin: 10px 10px 100px 10px;
+  margin: 0 10px 100px;
   padding-top: 10px;
 }
 
@@ -40,6 +40,11 @@ h2 {
 
 .exhibition-brief {
   max-width: 85%;
+}
+
+.wrapper {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .ecology {
