--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,13 @@
 h1 {
   color: var(--almost-white);
   text-shadow: 0px 3px 6px #000;
-  margin: 0 10px 100px;
+  margin: 10px 10px 100px;
   padding-top: 10px;
 }
 
 h2 {
   margin-top: 40px;
+  margin-bottom: 0;
 }
 
 .featured-exhibition {
@@ -92,6 +93,7 @@ h2 {
 .image-small {
   max-width: 100%;
   min-height: 100%;
+  object-fit: cover;
 }
 
 .news {
