--- a/css/media.css
+++ b/css/media.css
@@ -33,7 +33,8 @@
   }
 }
 
-@media only screen and (min-width: 658px) {
+@media only screen and (min-width: 694px) {
+  /*change made at 658 before*/
   h1,
   h2,
   h3,
@@ -43,16 +44,31 @@
 
   /* ---------- Landing page & Exhibitions ---------- */
 
-  .featured-exhibition-brief {
+  /*.featured-exhibition-brief {
     margin-left: 20px;
     margin-right: 20px;
+  }*/
+
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 100%;
+    row-gap: 30px;
   }
 
-  .exhibition,
+  .wrapper h2 {
+    grid-column: -1/1;
+  }
+
+  .exhibitions-card {
+    max-width: 100%;
+  }
+
+  /*.exhibition,
   .exhibition-brief,
   .exhibition-info {
     max-width: 320px;
-  }
+  }*/
 
   .exhibition-info h2 {
     margin-left: 0px;
@@ -60,14 +76,6 @@
 
   .explore-section-heading h3 {
     margin-top: 0;
-  }
-  .wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .wrapper h2 {
-    grid-column: -1/1;
   }
 
   .news {
