--- a/css/media.css
+++ b/css/media.css
@@ -33,6 +33,13 @@
   }
 }
 
+@media only screen and (min-width: 500px) {
+  .wrapper {
+    max-width: 70%;
+    margin: auto;
+  }
+}
+
 @media only screen and (min-width: 694px) {
   /*change made at 658 before*/
   h1,
@@ -56,6 +63,7 @@
     row-gap: 30px;
   }
 
+  .wrapper h1,
   .wrapper h2 {
     grid-column: -1/1;
   }
@@ -64,6 +72,9 @@
     max-width: 100%;
   }
 
+  article {
+    margin-bottom: 0;
+  }
   /*.exhibition,
   .exhibition-brief,
   .exhibition-info {
