--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,14 @@
 h1 {
   color: var(--almost-white);
   text-shadow: 0px 3px 6px #000;
-  margin: 10px 10px 100px;
+  margin: 0 10px 100px;
   padding-top: 10px;
+}
+
+h1 a,
+h2 a {
+  text-decoration: none;
+  color: var(--almost-white);
 }
 
 h2 {
